examples/neg/patternmatch.effekt
type Foo { Bar() }

def main() = {
  val f: Int = 42;
  f match {
    case Bar() => 42
  }
}